# clash-compiler

./: cabal.project  hie.yaml
changelog/: Changelog.hs  changelog.cabal
clash-cores/: clash-cores.cabal
clash-ffi/: README.md  clash-ffi.cabal
clash-ffi/src/Clash/FFI/: Iverilog.hs  Monad.hs  View.hs
clash-ghc/: clash-ghc.cabal
clash-lib/: clash-lib.cabal
clash-lib/prims/systemverilog/: Clash_Explicit_BlockRam.primitives.yaml
clash-lib/prims/verilog/: Clash_Explicit_BlockRam.primitives.yaml
clash-lib/prims/vhdl/: Clash_Explicit_BlockRam.primitives.yaml
clash-lib/src/Clash/: Driver.hs  Normalize.hs
clash-lib/src/Clash/Driver/: Types.hs
clash-lib/src/Clash/Netlist/: Types.hs
clash-lib/src/Clash/Normalize/: PrimitiveReductions.hs  Types.hs  Util.hs
clash-lib/src/Clash/Primitives/: TrueDualPortBlockRam.hs
clash-lib/src/Clash/Rewrite/: Types.hs  Util.hs  WorkFree.hs
clash-lib/tests/Test/Clash/: Rewrite.hs
clash-prelude/: clash-prelude.cabal
clash-prelude/src/Clash/: CPP.hs  Constants.hs  Signal.hs
clash-prelude/src/Clash/Explicit/: BlockRam.hs  RAM.hs  ROM.hs  Signal.hs  Synchronizer.hs
clash-prelude/src/Clash/Num/: Overflowing.hs
clash-prelude/src/Clash/Prelude/: BlockRam.hs  RAM.hs  ROM.hs  Synchronizer.hs
clash-prelude/src/Clash/Signal/: Internal.hs
clash-prelude/tests/: unittests.hs
clash-prelude/tests/Clash/Tests/: AsyncFIFOSynchronizer.hs  Constants.hs
tests/: Main.hs
tests/shouldwork/Cores/Floating/: Experiment.hs  TestRun4.hs  Xilinx.hs
tests/shouldwork/Signal/: AndEnable.hs  AndSpecificEnable.hs
(+43 files in other folders)
